# qqkrls

./: .gitignore  README.md  demo_heatmap.py  guide_main.tex  guide_part1.tex  guide_part2.tex  guide_part3.tex  pyproject.toml  qqkrls_complete_tutorial.ipynb  test_qqkrls.py
docs/: index.html  text_outputs.json
qqkrls/: __init__.py  diagnostics.py  krls.py  plotting.py  qqkrls.py  tables.py  utils.py
