[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qqkrls"
version = "1.0.0"
description = "Quantile-on-Quantile Kernel-Based Regularized Least Squares — A Python implementation of KRLS (Hainmueller & Hazlett, 2014) and QQKRLS (Adebayo et al., 2024) with publication-quality MATLAB-style visualizations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Dr. Merwan Roudane", email = "merwanroudane920@gmail.com"},
]
keywords = [
    "KRLS",
    "kernel regression",
    "quantile-on-quantile",
    "machine learning",
    "econometrics",
    "nonparametric",
    "marginal effects",
    "regularization",
    "time series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
plotly = ["plotly>=5.0", "kaleido>=0.2"]
full = ["plotly>=5.0", "kaleido>=0.2", "seaborn>=0.12", "statsmodels>=0.13"]

[project.urls]
Homepage = "https://github.com/merwanroudane/qqkrls"
Documentation = "https://github.com/merwanroudane/qqkrls"
Repository = "https://github.com/merwanroudane/qqkrls"
Issues = "https://github.com/merwanroudane/qqkrls/issues"

[tool.setuptools.packages.find]
include = ["qqkrls*"]
